# pyproject.toml

[project]
name = "gpyreg"
version = "0.1.0"
description = "Lightweight package for Gaussian process regression."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib >= 3.6.2",
    "numpy >= 1.23.4",
    "pytest >= 7.2.0",
    "pytest-rerunfailures >= 10.2",
    "scipy >= 1.9.3",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["gpyreg"]

[project.optional-dependencies]
dev = [
    "sphinx >= 5.3.0",
]

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"

[tool.pycln]
all = true
