# pyproject.toml

[project]
name = "GPyReg"
dynamic = ["version"]  # use git tags for version, via setuptools_scm
description = "Lightweight package for Gaussian process regression."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib >= 3.5.1",
    "numpy >= 1.22.1",
    "pytest >= 6.2.5",
    "pytest-rerunfailures >= 10.2",
    "scipy >= 1.7.3",
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true
# Include examples in binary/wheel distribution:
packages = ["gpyreg", "gpyreg.examples"]
package-dir = {"gpyreg.examples" = "examples"}

[project.optional-dependencies]
dev = [
    "sphinx >= 4.3.2",
    "sphinx-book-theme>=0.2.0",
    "build >= 0.9.0",
    "numpydoc >= 1.2.1",
]

[build-system]
requires = [
    "setuptools >= 45",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"

[tool.pycln]
all = true

[tool.setuptools_scm]
